modification des classes/id, des tailles et ajout des polices

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       src="https://kit.fontawesome.com/cb8e7ae64b.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="style-tab.css"/>
     <link rel="stylesheet" href="style_header_mobile.css"/>
@@ -26,7 +31,7 @@
 
         <div>
           <a href="#hebergements" class="survol">Hébergements</a>
-          <a href="#Activités" class="survol">Activités</a>
+          <a href="#Activites" class="survol">Activités</a>
           <a href="#" class="gras" id="lien_inscrire"
             ><strong>S'inscrire</strong></a
           >
@@ -227,12 +232,12 @@
       </section>
     </div>
 
-    <section id="Activités">
+    <section id="Activites">
       <h1>Activités à Marseille</h1>
 
       <div class="images">
-        <a href="#" class="fig fig-activité fig-grand">
-          <figure class="activité activité_grd act1">
+        <a href="#" class="fig fig-activite fig-grand">
+          <figure class="activite activite_grd act1">
             <img src="images/activites/4_small/act1.jpg" class="act act1" />
             <figcaption class="figcaption">
               <strong>Vieux Port</strong>
@@ -240,9 +245,9 @@
           </figure>
         </a>
 
-        <div class="petit fig-activité">
+        <div class="petit fig-activite">
           <a href="#" class="fig fig-myn">
-            <figure class="activité activité_myn haut">
+            <figure class="activite activite_myn haut">
               <img src="images/activites/4_small/act2.jpg" class="act act2" />
               <figcaption class="figcaption">
                 <strong>Fort de Pomègues</strong>
@@ -251,7 +256,7 @@
           </a>
 
           <a href="#" class="fig fig-ptt">
-            <figure class="activité activité_ptt bas">
+            <figure class="activite activite_ptt bas">
               <img src="images/activites/4_small/act3.jpg" class="act act3" />
               <figcaption class="figcaption">
                 <strong>Îles du Frioul</strong>
@@ -260,8 +265,8 @@
           </a>
         </div>
 
-        <a href="#" class="fig fig-activité fig-grand">
-          <figure class="activité activité_grd">
+        <a href="#" class="fig fig-activite fig-grand">
+          <figure class="activite activite_grd">
             <img src="images/activites/4_small/act4.jpg" class="act act4" />
             <figcaption class="figcaption">
               <strong>Parc National des Calanques</strong>
@@ -269,9 +274,9 @@
           </figure>
         </a>
 
-        <div class="petit end fig-activité">
+        <div class="petit end fig-activite">
           <a href="#" class="fig fig-ptt">
-            <figure class="activité activité_ptt haut">
+            <figure class="activite activite_ptt haut">
               <img src="images/activites/4_small/act5.jpg" class="act act5" />
               <figcaption class="figcaption">
                 <strong>Notre-Dame-de-la-Garde</strong>
@@ -280,7 +285,7 @@
           </a>
 
           <a href="#" class="fig fig-myn">
-            <figure class="activité activité_myn bas">
+            <figure class="activite activite_myn bas">
               <img src="images/activites/4_small/act6.jpg" class="act act6" />
               <figcaption class="figcaption">
                 <strong>Parc Longchamp</strong>
@@ -299,7 +304,7 @@
         <p>Données et confidentialité</p>
       </section>
 
-      <section id="Nos-hébergements">
+      <section id="Nos-hebergements">
         <h2>Nos hébergement</h2>
         <p>Charte qualité</p>
         <p>Soumettre votre hôtel</p>
