--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 
 <html lang="fr">
   <head>
@@ -24,7 +25,7 @@
   <body>
     <header>
       <nav class="menu">
-        <img src="images/logo/Reservia.svg" />
+        <img src="images/logo/Reservia.svg" alt="logo Reservia"/>
         <!--logo Reservia-->
 
         <!--Hébergements, activités : renvoient aux sections de la page-->
@@ -49,12 +50,12 @@
           </div>
           <input class="barre" type="text" placeholder="Marseille, France" />
           <button class="btn-recherche">
-            <div class="recherche">Rechercher</div>
-            <div id="icone_recherche"><i class="fas fa-search"></i></div>
-          </button
-          <button class="btn-recherche-mobile "></button> <!-- display : none --> 
+            Rechercher
+          </button>
+          <button class="btn-recherche-mobile">
+            <i class="fas fa-search icone-recherche"></i>
+          </button>
         </div>
-        <!--Barre de recherche + bouton-->
       </form>
 
       <!--Filtres icônes : liste à puces? DOIVENT CHANGER D'APPARENCE AU SURVOL-->
@@ -79,7 +80,7 @@
 
     <div class="hebergement-et-populaire">
       <section id="hebergements">
-        <h1>Hébergements à Marseille</h1>
+        <h2>Hébergements à Marseille</h2>
         <!--Chaque carte d'hébergement doit être cliquable DANS SON INTEGRALITE-->
 
         <div id="hebergements_marseille">
@@ -87,6 +88,7 @@
             <figure class="hebergement inline-start">
               <img
                 src="images/hebergements/4_small/image1.jpg"
+                alt="photo hôtel"
                 class="imageHebergementsMarseille"
               />
               <figcaption>
@@ -103,6 +105,7 @@
             <figure class="hebergement">
               <img
                 src="images/hebergements/4_small/image2.jpg"
+                alt="photo hôtel"
                 class="imageHebergementsMarseille"
               />
               <figcaption>
@@ -118,6 +121,7 @@
             <figure class="hebergement inline-end">
               <img
                 src="images/hebergements/4_small/image3.jpg"
+                alt="photo hôtel"
                 class="imageHebergementsMarseille"
               />
               <figcaption>
@@ -134,6 +138,7 @@
             <figure class="hebergement inline-start">
               <img
                 src="images/hebergements/4_small/image4.jpg"
+                alt="photo hôtel"
                 class="imageHebergementsMarseille"
               />
               <figcaption>
@@ -150,6 +155,7 @@
             <figure class="hebergement">
               <img
                 src="images/hebergements/4_small/image5.jpg"
+                alt="photo hôtel"
                 class="imageHebergementsMarseille"
               />
               <figcaption>
@@ -166,6 +172,7 @@
             <figure class="hebergement inline-end">
               <img
                 src="images/hebergements/4_small/image6.jpg"
+                alt="photo hôtel"
                 class="imageHebergementsMarseille"
               />
               <figcaption>
@@ -178,12 +185,12 @@
             </figure>
           </a>
         </div>
-        <h2 class="afficher-plus">Afficher plus</h2>
+        <h3 class="afficher-plus">Afficher plus</h3>
       </section>
 
       <section id="Populaires">
         <div id="titre_pop">
-          <h1>Les plus populaires</h1>
+          <h2>Les plus populaires</h2>
           <p><i class="fas fa-chart-line icone_titre_pop"></i></p>
           <!--icône flèche apparait à droite du titre-->
         </div>
@@ -192,7 +199,7 @@
           <!--Chaque carte d'hébergement doit être cliquable DANS SON INTEGRALITE-->
           <a href="#" class="fig fig-populaire1">
             <figure class="populaire">
-              <img src="images/hebergements/4_small/pop1.jpg" class="pop pop1" />
+              <img src="images/hebergements/4_small/pop1.jpg" alt="photo hôtel" class="pop pop1" />
               <figcaption class="caption_pop">
                 <strong>Hôtel Le soleil du matin</strong><br />Nuit à partir de
                 128€ <br />
@@ -205,7 +212,7 @@
 
           <a href="#" class="fig fig-populaire2">
             <figure class="populaire pop2">
-              <img src="images/hebergements/4_small/pop2.jpg" class="pop pop2" />
+              <img src="images/hebergements/4_small/pop2.jpg" alt="photo hôtel" class="pop pop2" />
               <figcaption class="caption_pop">
                 <strong>Au coeur de l'eau Chambres d'Hôtes</strong><br />Nuit à
                 partir de 71€ <br />
@@ -218,7 +225,7 @@
 
           <a href="#" class="fig fig-populaire3">
             <figure class="populaire">
-              <img src="images/hebergements/4_small/pop3.jpg" class="pop pop3" />
+              <img src="images/hebergements/4_small/pop3.jpg" alt="photo hôtel" class="pop pop3" />
               <figcaption class="caption_pop">
                 <strong>Hôtel Tout bleu et blanc</strong><br />Nuit à partir de
                 68€ <br />
@@ -233,12 +240,12 @@
     </div>
 
     <section id="Activites">
-      <h1>Activités à Marseille</h1>
+      <h2>Activités à Marseille</h2>
 
       <div class="images">
         <a href="#" class="fig fig-activite fig-grand">
           <figure class="activite activite_grd act1">
-            <img src="images/activites/4_small/act1.jpg" class="act act1" />
+            <img src="images/activites/4_small/act1.jpg" alt="photo activité vieux port" class="act act1" />
             <figcaption class="figcaption">
               <strong>Vieux Port</strong>
             </figcaption>
@@ -248,7 +255,7 @@
         <div class="petit fig-activite">
           <a href="#" class="fig fig-myn">
             <figure class="activite activite_myn haut">
-              <img src="images/activites/4_small/act2.jpg" class="act act2" />
+              <img src="images/activites/4_small/act2.jpg" alt="photo activité fort de pomègues" class="act act2" />
               <figcaption class="figcaption">
                 <strong>Fort de Pomègues</strong>
               </figcaption>
@@ -257,7 +264,7 @@
 
           <a href="#" class="fig fig-ptt">
             <figure class="activite activite_ptt bas">
-              <img src="images/activites/4_small/act3.jpg" class="act act3" />
+              <img src="images/activites/4_small/act3.jpg" alt="photo activité îles du frioul" class="act act3" />
               <figcaption class="figcaption">
                 <strong>Îles du Frioul</strong>
               </figcaption>
@@ -267,7 +274,7 @@
 
         <a href="#" class="fig fig-activite fig-grand">
           <figure class="activite activite_grd">
-            <img src="images/activites/4_small/act4.jpg" class="act act4" />
+            <img src="images/activites/4_small/act4.jpg" alt="photo activité Calanques" class="act act4" />
             <figcaption class="figcaption">
               <strong>Parc National des Calanques</strong>
             </figcaption>
@@ -277,7 +284,7 @@
         <div class="petit end fig-activite">
           <a href="#" class="fig fig-ptt">
             <figure class="activite activite_ptt haut">
-              <img src="images/activites/4_small/act5.jpg" class="act act5" />
+              <img src="images/activites/4_small/act5.jpg" alt="photo activité Notre-Dame-de-la-Garde" class="act act5" />
               <figcaption class="figcaption">
                 <strong>Notre-Dame-de-la-Garde</strong>
               </figcaption>
@@ -286,7 +293,7 @@
 
           <a href="#" class="fig fig-myn">
             <figure class="activite activite_myn bas">
-              <img src="images/activites/4_small/act6.jpg" class="act act6" />
+              <img src="images/activites/4_small/act6.jpg" alt="photo activité Parc Longchamp" class="act act6" />
               <figcaption class="figcaption">
                 <strong>Parc Longchamp</strong>
               </figcaption>
@@ -298,20 +305,20 @@
 
     <footer>
       <section id="A-propos">
-        <h2>A propos</h2>
+        <h3>A propos</h3>
         <p>Fonctionnement du site</p>
         <p>Conditions générales de vente</p>
         <p>Données et confidentialité</p>
       </section>
 
       <section id="Nos-hebergements">
-        <h2>Nos hébergement</h2>
+        <h3>Nos hébergement</h3>
         <p>Charte qualité</p>
         <p>Soumettre votre hôtel</p>
       </section>
 
       <section id="Assistance">
-        <h2>Assistance</h2>
+        <h3>Assistance</h3>
         <p>Centre d'aide</p>
         <p>Nous contacter</p>
       </section>
