ajout de liens dans le footer

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="style-tab.css"/>
-    <link rel="stylesheet" href="style_header_mobile.css"/>
-    <link rel="stylesheet" href="style-smart.css" />
+    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="./CSS/style-tab.css"/>
+    <link rel="stylesheet" href="./CSS/style_header_mobile.css"/>
+    <link rel="stylesheet" href="./CSS/style-smart.css" />
    </head>
 
 
@@ -306,21 +306,21 @@
     <footer>
       <section id="A-propos">
         <h3>A propos</h3>
-        <p>Fonctionnement du site</p>
-        <p>Conditions générales de vente</p>
-        <p>Données et confidentialité</p>
+        <a href="#"><p>Fonctionnement du site</p></a>
+        <a href="#"><p>Conditions générales de vente</p></a>
+        <a href="#"><p>Données et confidentialité</p></a>
       </section>
 
       <section id="Nos-hebergements">
         <h3>Nos hébergement</h3>
-        <p>Charte qualité</p>
-        <p>Soumettre votre hôtel</p>
+        <a href="#"><p>Charte qualité</p></a>
+        <a href="#"><p>Soumettre votre hôtel</p></a>
       </section>
 
       <section id="Assistance">
         <h3>Assistance</h3>
-        <p>Centre d'aide</p>
-        <p>Nous contacter</p>
+        <a href="#"><p>Centre d'aide</p></a>
+        <a href="#"><p>Nous contacter</p></a>
       </section>
     </footer>
   </body>
